# lynxkite-2000

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Dockerfile  README.md  biome.json  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  run.sh  test.sh
.devcontainer/: devcontainer.json  postStartCommand.sh
.github/workflows/: docs.yaml  release-lynxkite-app.yaml  release-lynxkite-collection.yaml  release-lynxkite-core.yaml  release-lynxkite-graph-analytics.yaml  release-lynxkite-mcp.yaml  release.yaml  test.yaml  update-no-workspace.yaml
contributing/: index.html
data/: Graph RAG  LynxScribe demo
docs/: contributing.md  index.md  license.md  lynxkite-core.md  lynxkite-graph-analytics.md
examples/: AIMO  AIMO.lynxkite.json  Airlines demo  Airlines demo.lynxkite.json  Attribution.lynxkite.json  Bio Cypher demo.lynxkite.json  Bio demo  BioNeMo demo.lynxkite.json  Generative drug screening  Generative drug screening.lynxkite.json  Graph RAG  Graph RAG.lynxkite.json  HeteroEncoder.lynxkite.json  Image processing  Image processing.lynxkite.json  Image table.lynxkite.json  Inductive link prediction.lynxkite.json  Link Prediction with PyKEEN.lynxkite.json  Link prediction with numeric attributes.lynxkite.json  LynxScribe Data Cleaning.lynxkite.json  LynxScribe FAQ Chatbot Builder.lynxkite.json  LynxScribe Image RAG  LynxScribe Image Search.lynxkite.json  LynxScribe RAG Chatbot.lynxkite.json  LynxScribe demo  LynxScribe demo.lynxkite.json  MLP Model.lynxkite.json  Model definition  Model definition.lynxkite.json  Model use  Model use.lynxkite.json  Multi-output demo.lynxkite.json  NetworkX demo  NetworkX demo.lynxkite.json  Node embeddings in downstream tasks.lynxkite.json  ODE-GNN  ODE-GNN experiment  ODE-GNN experiment.lynxkite.json  ODE-GNN.lynxkite.json  PyTorch demo  (+24 more)
keycloak/: README.md:Zone.Identifier
license/: index.html
lynxkite/: pyproject.toml
lynxkite-app/: .gitignore  README.md  pyproject.toml
lynxkite-assistant/: README.md  pyproject.toml
lynxkite-assistant/agent_env_setup/: prompt  setup
lynxkite-assistant/src/lynxkite_assistant/: __init__.py  assistant.py  generate_skill_from_file.py  generate_skills_from_catalog.py  instructions.py  python_workspace_conversion.py  sync_workspaces.py  workspace_backend.py  workspace_comments.py
lynxkite-assistant/tests/: sample_interactions.py  test_end-to-end.py  test_python_workspace_conversion.py  test_workspace_backend.py
lynxkite-assistant/tests/files/: N16_broken.lynxkite.json  N16_no_comments.lynxkite.json  after_change.lynxkite.json  blank.lynxkite.json  boxes.py  disorganized.lynxkite.json  modified.lynxkite.json  original.lynxkite.json
lynxkite-assistant/tests/files/workspace_files/: modified.py
lynxkite-bio/: README.md  pyproject.toml
lynxkite-bio/src/lynxkite_bio/: __init__.py  k8s.py  llm.py  nims.py  rdkit.py
lynxkite-core/: README.md  pyproject.toml
lynxkite-core/src/lynxkite/core/: ops.py  workspace.py
lynxkite-core/src/lynxkite/core/executors/: one_by_one.py  simple.py
lynxkite-core/src/lynxkite_core/: folder_settings.py  matplotlib_to_image.py  opcontext.py  ops.py  terminal_emulator.py  workspace.py  workspace_progress.py
lynxkite-core/src/lynxkite_core/executors/: one_by_one.py  simple.py
lynxkite-core/tests/: test_folder_settings.py  test_one_by_one.py  test_opctx.py  test_ops.py  test_simple.py  test_workspace.py
lynxkite-graph-analytics/: .dockerignore  Dockerfile.bionemo  README.md  pyproject.toml
lynxkite-graph-analytics/src/lynxkite/graph_analytics/: lynxkite_ops.py  pytorch_model_ops.py
lynxkite-graph-analytics/src/lynxkite_graph_analytics/: __init__.py  bionemo_ops.py  bundle.py  core.py  elementwise.py  lynxkite_ops.py  ml_ops.py  networkx_ops.py  pykeen_ops.py  pytorch_model_ops.py  record.py  relation_definition.py
lynxkite-graph-analytics/src/lynxkite_graph_analytics/models/: gat.py
lynxkite-graph-analytics/src/lynxkite_graph_analytics/operations/: __init__.py  attribution_ops.py  attribution_visualizations.py  basic_ops.py  file_ops.py  graph_ops.py  ml_ops.py  pykeen_ops.py  query_ops.py  segmentation_ops.py  table_ops.py  visualization_ops.py
lynxkite-graph-analytics/src/lynxkite_graph_analytics/ops/: basic_ops.py  graph_ops.py  ml_ops.py  visualization_ops.py
lynxkite-graph-analytics/src/lynxkite_graph_analytics/pytorch/: __init__.py  core.py  ops.py  pytorch_core.py  pytorch_ops.py
lynxkite-graph-analytics/src/lynxkite_plugins/graph_analytics/: __init__.py  lynxkite_ops.py  networkx_ops.py  pytorch_model_ops.py
lynxkite-graph-analytics/tests/: test_bundle.py  test_core.py  test_elementwise.py  test_elementwise_opctx.py  test_lynxkite_ops.py  test_pytorch_model_ops.py  test_submodule.py
lynxkite-lynxscribe/: README.md  pyproject.toml
lynxkite-lynxscribe/src/lynxkite_lynxscribe/: __init__.py  llm_ops.py  lynxscribe_ops.py
lynxkite-lynxscribe/src/lynxkite_plugins/lynxscribe/: __init__.py  llm_ops.py  lynxscribe_ops.py
lynxkite-lynxscribe/src/lynxscribe/lynxkite/: lynxscribe_ops.py
lynxkite-lynxscribe/tests/: test_llm_ops.py
lynxkite-mcp/: README.md  pyproject.toml
lynxkite-mcp/agent_env_setup/: AGENTS.md  mcp.json  prompt  setup
lynxkite-mcp/src/lynxkite_mcp/: assistant_mcp.py  mcp_server.py
lynxkite-mcp/tests/: client.py
lynxkite-ops/: pyproject.toml
lynxkite-pillow/: pyproject.toml
lynxkite-pillow-example/: pyproject.toml
lynxkite-pillow-example/src/lynxkite_pillow_example/: __init__.py
lynxkite-pillow-example/src/lynxkite_plugins/pillow_example/: __init__.py
lynxkite-vibe/: pyproject.toml
lynxkite-vibe/experiments/experiment 1/: main.py
lynxkite-vibe/src/lynxkite_vibe/: main.py  python_to_workspace.py
search/: search_index.json
server/: basic_ops.py  crdt.py  llm_ops.py  lynxkite_ops.py  lynxscribe_ops.py  main.py  networkx_ops.py  ops.py  pillow_ops.py  pytorch_model_ops.py  test_llm_ops.py  workspace.py
stylesheets/: extra.css
web/: index.html  next.config.ts  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+1148 files in other folders)
