[project]
name = "lynxkite-assistant"
version = "0.3.0"
description = "Deep Agents-powered assistant API for LynxKite"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.5.1",
    "fastapi[standard]>=0.115.6",
]
license = "AGPL-3.0-or-later"

[project.urls]
Homepage = "https://github.com/lynxkite/lynxkite-2000/"

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"
