[project]
name = "lynxkite-core"
version = "0.1.0"
description = "A lightweight dependency for authoring LynxKite operations and executors"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
