[project]
name = "lynxkite-core"
version = "0.1.0"
description = "A lightweight dependency for authoring LynxKite operations and executors"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.11.7",
]
classifiers = ["License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)"]

[project.urls]
Homepage = "https://github.com/lynxkite/lynxkite-2000/"

[tool.deptry.per_rule_ignores]
DEP001 = ["matplotlib", "griffe", "pycrdt"]
DEP003 = ["matplotlib", "griffe", "pycrdt"]

[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]
