[project]
name = "lynxkite-core"
version = "0.3.0"
description = "A lightweight dependency for authoring LynxKite operations and executors"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.11.7",
]
license = "AGPL-3.0-or-later"

[project.urls]
Homepage = "https://github.com/lynxkite/lynxkite-2000/"

[tool.deptry.per_rule_ignores]
DEP001 = ["matplotlib", "PIL", "griffe", "pycrdt", "gradio", "starlette"]
DEP003 = ["matplotlib", "PIL", "griffe", "pycrdt", "gradio", "starlette"]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"
