[project]
name = "lynxkite-graph-analytics"
version = "0.1.0"
description = "The graph analytics executor and boxes for LynxKite"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "grand-cypher>=0.12.0",
    "lynxkite-core",
    "matplotlib>=3.10.0",
    "networkx>=3.4.2",
    "pandas>=2.2.3",
    "polars[gpu]>=1.14.0",
]

[project.optional-dependencies]
gpu = [
    "nx-cugraph-cu12>=24.12.0",
]

[tool.uv.sources]
lynxkite-core = { path = "../lynxkite-core" }
