[project]
name = "lynxkite-graph-analytics"
version = "0.1.0"
description = "The graph analytics executor and boxes for LynxKite"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fsspec>=2025.2.0",
    "grand-cypher>=0.12.0",
    "joblib>=1.4.2",
    "lynxkite-core",
    "matplotlib>=3.10.0",
    "networkx[default]>=3.4.2",
    "osmnx>=2.0.1",
    "pandas>=2.2.3",
    "polars[gpu]>=1.14.0",
    "torch>=2.6.0",
    "torch-geometric>=2.6.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
]
gpu = [
    "nx-cugraph-cu12>=24.12.0",
]

[tool.uv.sources]
lynxkite-core = { path = "../lynxkite-core" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
