[project]
name = "lynxkite-pillow-example"
version = "0.1.0"
description = "An example LynxKite plugin that wraps some Pillow image processing features in LynxKite operations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fsspec>=2025.2.0",
    "lynxkite-core",
    "pillow>=11.1.0",
    "requests>=2.32.3",
    "aiohttp>=3.11.11",
]
classifiers = ["License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)"]

[project.urls]
Homepage = "https://github.com/lynxkite/lynxkite-2000/"

[tool.uv.sources]
lynxkite-core = { path = "../lynxkite-core" }
