[project]
name = "lynxkite-pillow-example"
version = "0.1.0"
description = "An example LynxKite plugin that wraps some Pillow image processing features in LynxKite operations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fsspec>=2025.2.0",
    "lynxkite-core",
    "pillow>=11.1.0",
]
classifiers = ["License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)"]

[project.urls]
Homepage = "https://github.com/lynxkite/lynxkite-2000/"

[tool.uv.sources]
lynxkite-core = { workspace = true }

[tool.deptry.package_module_name_map]
lynxkite-core = "lynxkite"
pillow = "PIL"

[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]
