[project]
name = "lynxkite-pillow-example"
version = "0.3.0"
description = "An example LynxKite plugin that wraps some Pillow image processing features in LynxKite operations"
requires-python = ">=3.11"
dependencies = [
    "fsspec>=2025.2.0",
    "lynxkite-core",
    "pillow>=11.1.0",
]
license = "AGPL-3.0-or-later"

[project.urls]
Homepage = "https://github.com/lynxkite/lynxkite-2000/"

[tool.deptry.package_module_name_map]
lynxkite-core = "lynxkite"
pillow = "PIL"

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"
