[project]
name = "lynxkite-pillow"
version = "0.1.0"
description = "An example LynxKite plugin that wraps some Pillow image processing features in LynxKite operations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lynxkite-ops",
    "pillow>=11.1.0",
]

[tool.uv.sources]
lynxkite-ops = { path = "../lynxkite-ops" }
